--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,43 @@
   "solidity.packageDefaultDependenciesDirectory": "lib",
   "solidity.formatter": "prettier",
   "solidity.monoRepoSupport": false,
+  "solidity.linter": "solhint",
   "solidity.remappings": [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
-    "@chainlink/contracts=lib/chainlink/contracts"
+    "@chainlink/contracts=lib/chainlink/contracts",
+    "@v3-periphery/contracts=lib/v3-periphery/contracts"
   ],
-  "[solidity]": {
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  "security.olympix.detectors.arbitraryAddressSpoofingAttack": true,
+  "security.olympix.detectors.arbitraryTransferFrom": true,
+  "security.olympix.detectors.noAccessControlPayableFallback": true,
+  "security.olympix.detectors.ownerSinglePointOfFailure": true,
+  "security.olympix.detectors.anyTxOrigin": true,
+  "security.olympix.detectors.faultyDiv": true,
+  "security.olympix.detectors.enumConversionOutOfRange": true,
+  "security.olympix.detectors.uintToIntConversion": true,
+  "security.olympix.detectors.downcastOfNumberToAddress": true,
+  "security.olympix.detectors.unsafeDowncast": true,
+  "security.olympix.detectors.swappedShiftParams": true,
+  "security.olympix.detectors.unaryPlusExpression": true,
+  "security.olympix.detectors.uncheckedBlockWithSubtraction": true,
+  "security.olympix.detectors.assemblyReturnInsteadOfLeave": true,
+  "security.olympix.detectors.callsAssemblyReturn": true,
+  "security.olympix.detectors.delegateCallInLoop": true,
+  "security.olympix.detectors.emptyPayableFallback": true,
+  "security.olympix.detectors.lowLevelCallParamsVerified": true,
+  "security.olympix.detectors.improperDiamondPattern": true,
+  "security.olympix.detectors.missingGapVariable": true,
+  "security.olympix.detectors.unenforcedStateMaintenanceKeywords": true,
+  "security.olympix.detectors.unboundedPragma": true,
+  "security.olympix.detectors.directionalOverrideCharacter": true,
+  "security.olympix.detectors.abiEncodePackedDynamicTypes": true,
+  "security.olympix.detectors.callsInLoop": true,
+  "security.olympix.detectors.callWithoutGasBudget": true,
+  "security.olympix.detectors.msgValueReuse": true,
+  "security.olympix.detectors.abiEncoderArray": true,
+  "security.olympix.detectors.blockRandomness": true,
+  "security.olympix.project.includePath": "/src",
+  "security.olympix.project.testsPath": "/test",
+
 }
