--- a/slither.config.json
+++ b/slither.config.json
@@ -1,11 +1,11 @@
 {
-    "detectors_to_exclude": "naming-convention,solc-version,similar-names",
+    "detectors_to_exclude": "naming-convention,solc-version,similar-names,timestamp,low-level-calls",
     "exclude_informational": false,
     "exclude_low": false,
     "exclude_medium": false,
     "exclude_high": false,
     "disable_color": false,
-    "filter_paths": "(mocks/|test/|script/|upgradedProtocol/)",
+    "filter_paths": "(mocks/|test/|script/|upgradedProtocol/|lib/)",
     "legacy_ast": false,
     "exclude_dependencies": true
 }
