--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@ out/
 bin/
 
 # Ignores development broadcast logs
-!/broadcast
+broadcast/**/**/run-*.json
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+!broadcast/**/**/run-latest.json
 
 # Docs
 docs/
