--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "test": "forge test -vvv",
     "analyze": "slither .",
     "prepare": "husky",
-    "postinstall": "forge install"
+    "postinstall": "forge install",
+    "deploy:Modular": "forge script script/DeployModular.s.sol --broadcast --verify --trezor -vvvv --rpc-url$1",
+    "deploy:UniswapV3PoolModule": "forge script script/modules/DeployUniswapV3PoolModule.s.sol --broadcast --verify --trezor -vvvv --rpc-url$1"
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "solhint-plugin-chainlink-solidity": "npm:@chainlink/solhint-plugin-chainlink-solidity@^1.0.1",
     "husky": "^9.1.7",
     "solhint": "^6.0.1",
+    "solhint-plugin-chainlink-solidity": "npm:@chainlink/solhint-plugin-chainlink-solidity@^1.0.1",
     "solhint-plugin-prettier": "^0.1.0"
   }
 }
