--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,9 @@
-name: CI
-
-permissions:
-  contents: read
+name: Test
 
 on:
   push:
     paths:
+      - ".github/workflows/test.yml"
       - "src/**"
       - "lib/**"
       - "test/**"
@@ -13,6 +11,7 @@ on:
 
   pull_request:
     paths:
+      - ".github/workflows/test.yml"
       - "src/**"
       - "lib/**"
       - "test/**"
@@ -42,31 +41,3 @@ jobs:
 
       - name: Run Forge tests
         run: forge test -vvv
-  analyze-code:
-    name: "Analyze Code"
-    runs-on: ubuntu-latest
-    needs: run-tests
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: "Install Node"
-        uses: actions/setup-node@v6
-
-      - name: "Install dependencies"
-        run: yarn install
-
-      - name: "Run Linter"
-        run: yarn solhint --config .solhint.json src/**/*.sol --max-warnings 0
-
-      - name: "Run Slither"
-        uses: crytic/slither-action@v0.4.1
-        with:
-          fail-on: all
-
-      - name: "Run Aderyn"
-        uses: Cyfrin/aderyn-ci@v0.0.9
-        with:
-          fail-on: any
